overflow fix

--- a/src/components/Content/hero.css
+++ b/src/components/Content/hero.css
@@ -1,5 +1,5 @@
 .hero {
-  overflow: hidden;
+  /* overflow: hidden; */
   flex-direction: column;
   display: flex;
 }
